results/archive/b60/compile_winograd_output_se_relu_input_kernel.dp_20260309_124438.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124438
Kernel: winograd_output_se_relu_input_kernel.dp
Source: /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:58:12: error: use of undeclared identifier '__expf'
   58 |   auto e = __expf(el);
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:79:14: error: use of undeclared identifier 'tanh'; did you mean 'sycl::tanh'?
   79 |       cVal = tanh(cVal);
      |              ^~~~
      |              sycl::tanh
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/builtins/math_functions.inc:148:23: note: 'sycl::tanh' declared here
  148 | BUILTIN_GENF(ONE_ARG, tanh)
      |                       ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:82:29: error: use of undeclared identifier '__expf'
   82 |       cVal = 1.0f / (1.0f + __expf(-cVal));
      |                             ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:89:33: error: use of undeclared identifier '__expf'
   89 |         cVal = scale * alpha * (__expf(cVal) - 1.0f);
      |                                 ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:96:23: error: use of undeclared identifier '__expf'
   96 |       cVal /= (1.0f + __expf(-cVal));
      |                       ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:103:7: error: use of undeclared identifier '__trap'
  103 |       __trap();
      |       ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:173:10: error: use of undeclared identifier '__shfl_xor_sync'
  173 |     x += __shfl_xor_sync(0xFFFFFFFF, x, mask);
      |          ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:186:2: error: a type specifier is required for all declarations
  186 |  __launch_bounds__(
      |  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:188:7: error: expected ';' after top level declarator
  188 |     1) void OutputTransform_SE_relu_InputTransform_kernel(int N, int C,
      |       ^
      |       ;
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:189:70: error: unknown type name 'T'
  189 |                                                            int se_K, T* output,
      |                                                                      ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:190:66: error: unknown type name 'T'
  190 |                                                            const T* input,
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:191:60: error: unknown type name 'T'
  191 |                                                            T* skip,
      |                                                            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:192:66: error: unknown type name 'T'
  192 |                                                            const T* bias,
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:193:66: error: unknown type name 'T'
  193 |                                                            const T* w1,
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:194:66: error: unknown type name 'T'
  194 |                                                            const T* b1,
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:195:66: error: unknown type name 'T'
  195 |                                                            const T* w2,
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:196:66: error: unknown type name 'T'
  196 |                                                            const T* b2) {
      |                                                                  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:198:46: error: use of undeclared identifier 'T'
  198 |   const bool fp16 = std::is_same<sycl::half, T>::value;
      |                                              ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:200:11: error: use of undeclared identifier 'item'
  200 |   int k = item.get_local_id(0);
      |           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124438'
+ echo 'Kernel: winograd_output_se_relu_input_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp -o /workspace/build_sycl/winograd_output_se_relu_input_kernel.dp.o
+ tee /workspace/results/b60/compile_winograd_output_se_relu_input_kernel.dp_20260309_124438.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
